--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,7 +1,8 @@
 body {
   	background-color: #180153;
   	padding: 50px 20px;	
-	font-family: Microsoft YaHei, serif;	
+	/*font-family: Microsoft YaHei, serif;*/
+	font-family: "Î¢ÈíÑÅºÚ",Verdana, Arial, Helvetica, sans-serif;
 	color: #FFF;	
 }
 
